Update filebeat input docs (#19110)
Include unix input.
Change s3 to S3.
Change "Azure eventhub" to "Azure Event Hub".

--- a/filebeat/docs/filebeat-options.asciidoc
+++ b/filebeat/docs/filebeat-options.asciidoc
@@ -99,3 +99,5 @@ include::inputs/input-syslog.asciidoc[]
 include::inputs/input-tcp.asciidoc[]
 
 include::inputs/input-udp.asciidoc[]
+
+include::inputs/input-unix.asciidoc[]
