--- a/x-pack/elastic-agent/docs/elastic-agent.asciidoc
+++ b/x-pack/elastic-agent/docs/elastic-agent.asciidoc
@@ -1,11 +1,15 @@
 [[elastic-agent-installation-configuration]]
+[role="xpack"]
+
 = Manage your {agent}s
 
 experimental[]
 
+// tag::agent-install-intro[]
 {agent} is a single, unified agent that you can deploy to hosts or containers to
 collect data and send it to the {stack}. Behind the scenes, {agent} runs the
 {beats} shippers or Endpoint required for your configuration.
+// end::agent-install-intro[]
 
 To learn how to install, configure, and run your {agent}s, see:
 
