--- a/x-pack/elastic-agent/docs/run-elastic-agent.asciidoc
+++ b/x-pack/elastic-agent/docs/run-elastic-agent.asciidoc
@@ -1,17 +1,51 @@
 [[run-elastic-agent]]
+[role="xpack"]
 = Run {agent}
 
 experimental[]
 
 {agent} runs in two modes: standalone or fleet. The two modes differ in how you
-configure and manage the agent.
+configure and manage the Agent.
+
+[float]
+[[fleet-mode]]
+== Run in {fleet} mode
+
+With _fleet mode_, you manage {agent} remotely. The Agent uses a trusted {kib}
+instance to retrieve configurations and report Agent events. This trusted {kib}
+instance must have {ingest-manager} and {fleet} enabled.
+
+To create a trusted communication channel between {agent} and {kib}, enroll the
+Agent to {fleet}.
+
+To enroll an {agent} to {fleet}:
+
+. Stop the Agent, if it's already running.
+
+. Go the **{fleet}** tab in {ingest-manager}, and click **Enroll new agent** to
+generate a token. See <<ingest-management-getting-started>> for detailed steps.
+
+. Enroll the Agent:
++
+[source,shell]
+----
+./elastic-agent enroll http://localhost:5601 $token
+----
++
+Where `$token` is an enrollment token acquired from {fleet}.
+
+To start {agent}, run:
+[source,shell]
+----
+./elastic-agent run
+----
 
 [float]
 [[standalone-mode]]
 == Run in standalone mode (default)
 
-With _standalone mode_, you manually configure and manage the agent locally.
-Each agent is configured to be in standalone mode by default after installation.
+With _standalone mode_, you manually configure and manage the Agent locally.
+Each Agent is configured to be in standalone mode by default after installation.
 
 If {agent} is installed as an auto-starting service, it will run automatically
 when you restart your system.
@@ -31,35 +65,3 @@ For configuration options, see <<elastic-agent-configuration>>.
 
 //<<elastic-agent-configuration-example,`elastic-agent_configuration_example.yml`>>
 
-[float]
-[[fleet-mode]]
-== Run in {fleet} mode
-
-With _fleet mode_, you manage {agent} remotely. The agent uses a trusted {kib}
-instance to retrieve configurations and report agent events. This trusted {kib}
-instance must have {ingest-manager} and {fleet} enabled.
-
-To create a trusted communication channel between {agent} and {kib}, enroll the
-agent to {fleet}.
-
-To enroll an {agent} to {fleet}:
-
-. Stop the agent, if it's already running.
-
-. Go the **{fleet}** tab in {ingest-manager}, and click **Enroll new agent** to
-generate a token. See <<ingest-management-getting-started>> for detailed steps.
-
-. Enroll the agent:
-+
-[source,shell]
-----
-./elastic-agent enroll http://localhost:5601 $token
-----
-+
-Where `$token` is an enrollment token acquired from {fleet}.
-
-To start {agent}, run:
-[source,shell]
-----
-./elastic-agent run
-----
