[Journalbeat] Add ECS fields to journalbeat (#19176)
* Add ECS fields to journalbeat

* Add changelog entry

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -419,6 +419,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 
 - Added an `id` config option to inputs to allow running multiple inputs on the
   same journal. {pull}18467{18467}
+- Add basic ECS categorization and `log.syslog` fields. {pull}19176[19176]
 
 *Metricbeat*
 
