--- a/libbeat/docs/release-notes/breaking/breaking-7.8.asciidoc
+++ b/libbeat/docs/release-notes/breaking/breaking-7.8.asciidoc
@@ -12,7 +12,13 @@
 
 //tag::notable-breaking-changes[]
 [float]
+==== Known problem with Kafka output
 
+The Kafka output fails to connect when using multiple TLS brokers. We advise
+not to upgrade to {beats} 7.8.0 if you're using the Kafka output in this
+configuration.
+
+[float]
 ====  APM Instrumentation
 
 Libbeat includes the Elastic APM Agent for instrumenting the publishing pipeline.
