--- a/libbeat/outputs/kafka/docs/kafka.asciidoc
+++ b/libbeat/outputs/kafka/docs/kafka.asciidoc
@@ -6,7 +6,7 @@
 ++++
 
 [IMPORTANT]
-.Known problem in version 7.8.0
+.Known issue in version 7.8.0
 ====
 The Kafka output fails to connect when using multiple TLS brokers. We advise
 not to upgrade to {beatname_uc} 7.8.0 if you're using the Kafka output in this
