[Packetbeat] ECS 1.5 update (#19167)
* Add packetbeat changes

* Fix up tests

* Add changelog entry

* Add compile time upgrade guard as a reminder and add inline marshal tag for ecs

* Fix early termination for marshaling code

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -505,6 +505,8 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 
 *Packetbeat*
 
+- Add ECS fields for x509 certs, event categorization, and related IP info. {pull}19167[19167]
+
 *Functionbeat*
 - Add basic ECS categorization and `cloud` fields. {pull}19174[19174]
 
