Add automatic retries and exponential backoff to Filebeat httpjson input (#18956)
- Add automatic retries and exponential backoff to Filebeat httpjson input (#18956)
- Add test cases
- Support the new OAuth2 functionality

--- a/x-pack/filebeat/docs/inputs/input-httpjson.asciidoc
+++ b/x-pack/filebeat/docs/inputs/input-httpjson.asciidoc
@@ -261,6 +261,21 @@ This specifies the field in the HTTP Header of the response that specifies the
 epoch time when the rate limit will reset.
 
 [float]
+==== `retry.max_attempts`
+
+This specifies the maximum number of retries for the retryable HTTP client. Default: 5.
+
+[float]
+==== `retry.wait_min`
+
+This specifies the minimum time to wait before a retry is attempted. Default: 1s.
+
+[float]
+==== `retry.wait_max`
+
+This specifies the maximum time to wait before a retry is attempted. Default: 60s.
+
+[float]
 ==== `ssl`
 
 This specifies SSL/TLS configuration. If the ssl section is missing, the host's
