--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -410,6 +410,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add support for v1 consumer API in Cloud Foundry input, use it by default. {pull}19125[19125]
 - Explicitly set ECS version in all Filebeat modules. {pull}19198[19198]
 - Add new mode to multiline reader to aggregate constant number of lines {pull}18352[18352]
+- Add automatic retries and exponential backoff to httpjson input. {pull}18956[18956]
 
 *Heartbeat*
 
