--- a/metricbeat/docs/autodiscover-hints.asciidoc
+++ b/metricbeat/docs/autodiscover-hints.asciidoc
@@ -130,6 +130,25 @@ annotations:
 -------------------------------------------------------------------------------------
 
 [float]
+===== Multiple sets of hints
+When a container port needs multiple modules to be defined on it, sets of annotations can be provided with numeric prefixes.
+If there are hints that don't have a numeric prefix then they get grouped together into a single configuration.
+
+["source","yaml",subs="attributes"]
+-------------------------------------------------------------------------------------
+annotations:
+  co.elastic.metrics/1.module: prometheus
+  co.elastic.metrics/1.hosts: '${data.host}:80/metrics'
+  co.elastic.metrics/1.period: 60s
+  co.elastic.metrics/module: prometheus
+  co.elastic.metrics/hosts: '${data.host}:80/metrics/p1'
+  co.elastic.metrics/period: 5s
+-------------------------------------------------------------------------------------
+
+The above configuration would spin up two metricbeat module configurations to ensure that the endpoint "/metrics/p1" is
+polled every 60s whereas the "/metrics" endpoint is polled every 60s.
+
+[float]
 ===== Configuring Namespace Defaults
 
 Hints can be configured on the Namespace's annotations as defaults to use when Pod level annotations are missing.
