--- a/metricbeat/module/kubernetes/_meta/docs.asciidoc
+++ b/metricbeat/module/kubernetes/_meta/docs.asciidoc
@@ -127,7 +127,7 @@ roleRef:
 [float]
 === Compatibility
 
-The Kubernetes module is tested with Kubernetes 1.13.x and 1.14.x
+The Kubernetes module is tested with Kubernetes 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, and 1.18.x
 
 [float]
 === Dashboard
