--- a/metricbeat/docs/modules/googlecloud.asciidoc
+++ b/metricbeat/docs/modules/googlecloud.asciidoc
@@ -167,6 +167,23 @@ This metricset fetches metrics from https://cloud.google.com/load-balancing/[Loa
 in Google Cloud Platform. The `loadbalancing` metricset contains all metrics
 exported from the https://cloud.google.com/monitoring/api/metrics_gcp#gcp-loadbalancing[GCP Load Balancing Monitoring API].
 
+The `loadbalancing` metricset comes with two predefined dashboards:
+
+[float]
+==== HTTPS
+For HTTPS load balancing:
+image::./images/metricbeat-googlecloud-load-balancing-https-overview.png[]
+
+[float]
+==== L3
+For L3 load balancing:
+image::./images/metricbeat-googlecloud-load-balancing-l3-overview.png[]
+
+[float]
+==== TCP/SSL/Proxy
+For TCP/SSL/Proxy load balancing:
+image::./images/metricbeat-googlecloud-load-balancing-tcp-ssl-proxy-overview.png[]
+
 [float]
 === `pubsub`
 This metricset fetches metrics from https://cloud.google.com/pubsub/[Pub/Sub]
