[DOC] Typo in Kerberos (#19265)

--- a/libbeat/outputs/elasticsearch/docs/elasticsearch.asciidoc
+++ b/libbeat/outputs/elasticsearch/docs/elasticsearch.asciidoc
@@ -678,7 +678,7 @@ Elasticsearch.
 
 See <<configuration-ssl>> for more information.
 
-===== `kebreros`
+===== `kerberos`
 
 Configuration options for Kerberos authentication.
 
