--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -10,6 +10,7 @@
 
 ==== Breaking changes
 - Rename agent to elastic-agent {pull}17391[17391]
+- Change fleet.yml structure, causes upgraded agent to register as new agent {pull}19248[19248]
 
 ==== Bugfixes
 
