[Elastic Agent] Fix artifact downloading to allow endpoint-security to be downloaded (#19503)
* Fix downloading so its not hard coded to beats repo name.

* Add artifact to spec file, use artifact for download.

* Fix tar installer.

* Fix downloading.

* Fix tests.

* Add changelog.

* Revert some un-needed changes.

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -74,3 +74,4 @@
 - Agent now runs the GRPC server and spawned application connect by to Agent {pull}18973[18973]
 - Rename input.type logs to logfile {pull}19360[19360]
 - Agent now installs/uninstalls Elastic Endpoint {pull}19248[19248]
+- Agent now downloads Elastic Endpoint {pull}19503[19503]
