Add support for Thread ID in Filebeat Kafka module (#19463)
Closes #18164

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -24759,6 +24759,16 @@ type: keyword
 
 --
 
+*`kafka.log.thread`*::
++
+--
+Thread name the log is coming from.
+
+
+type: keyword
+
+--
+
 [float]
 === trace
 
