--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -198,6 +198,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Fix Cisco ASA dissect pattern for 313008 & 313009 messages. {pull}19149[19149]
 - Fix date and timestamp formats for fortigate module {pull}19316[19316]
 - Fix memory leak in tcp and unix input sources. {pull}19459[19459]
+- Add missing `default_field: false` to aws filesets fields.yml. {pull}19568[19568]
 
 *Heartbeat*
 
