--- a/x-pack/metricbeat/module/googlecloud/stackdriver/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/googlecloud/stackdriver/_meta/docs.asciidoc
@@ -16,18 +16,19 @@ call.
 [float]
 == Metricset config and parameters
 
-* *metric_types*: Required, a list of metric type strings. Each call of the
+* *metric_types*: Required, a list of metric type strings, or a list of metric
+type prefixes. For example, `instance/cpu` is the prefix for metric type
+`instance/cpu/usage_time`, `instance/cpu/utilization` etc Each call of the
 `ListTimeSeries` API can return any number of time series from a single metric
 type. Metric type is to used for identifying a specific time series.
 
 * *aligner*: A single string with which aggregation operation need to be applied
 onto time series data for ListTimeSeries API. If it's not given, default aligner
-is set to be `ALIGN_NONE`. Google Cloud also supports `ALIGN_DELTA`, `ALIGN_RATE`,
-`ALIGN_MIN`, `ALIGN_MAX`, `ALIGN_MEAN`, `ALIGN_COUNT`, `ALIGN_SUM` and etc.
+is `ALIGN_NONE`. Google Cloud also supports `ALIGN_DELTA`, `ALIGN_RATE`,
+`ALIGN_MIN`, `ALIGN_MAX`, `ALIGN_MEAN`, `ALIGN_COUNT`, `ALIGN_SUM` etc.
 Please see
 https://cloud.google.com/monitoring/api/ref_v3/rpc/google.monitoring.v3#aligner[Aggregation Aligner]
 for the full list of aligners.
-
 
 [float]
 === Example Configuration
@@ -37,7 +38,7 @@ are specified: first one is to collect CPU usage time and utilization with
 aggregation aligner ALIGN_MEAN; second one is to collect uptime with aggregation
 aligner ALIGN_SUM. These metric types all have 240 seconds ingest delay time and
 60 seconds sample period. With `period` specified as `300s` in the config below,
-Metricbeat will collect compute metrics from googlecloud every 5-minute with
+Metricbeat will collect compute metrics from Google Cloud every 5-minute with
 given aggregation aligner applied for each metric type.
 +
 [source,yaml]
@@ -69,7 +70,7 @@ are specified: first one is to collect CPU usage time and utilization with
 aggregation aligner ALIGN_MEAN; second one is to collect uptime with aggregation
 aligner ALIGN_SUM. These metric types all have 240 seconds ingest delay time and
 60 seconds sample period. With `period` specified as `60s` in the config below,
-Metricbeat will collect compute metrics from googlecloud every minute with no
+Metricbeat will collect compute metrics from Google Cloud every minute with no
 aggregation. This case, the aligners specified in the configuration will be
 ignored.
 +
@@ -93,4 +94,33 @@ ignored.
       service: compute
       metric_types:
         - "instance/uptime"
+----
+
+* `stackdriver` metricset is enabled to collect metrics from all zones under
+`europe-west1-c` region in `elastic-observability` project. One set of metrics
+will be collected: metric types that starts with `instance/cpu` under `compute`
+service with aligner ALIGN_NONE. These metric types all have 240 seconds ingest
+delay time and 60 seconds sample period. With `period` specified as `1m` in
+the config below, Metricbeat will collect compute metrics from Google Cloud
+every minute with no aggregation. The metric types in `compute` service with
+`instance/cpu` prefix are: `instance/cpu/reserved_cores`,
+`instance/cpu/scheduler_wait_time`, `instance/cpu/usage_time`, and
+`instance/cpu/utilization`.
+
++
+[source,yaml]
+----
+- module: googlecloud
+  metricsets:
+    - stackdriver
+  zone: "europe-west1-c"
+  project_id: elastic-observability
+  credentials_file_path: "your JSON credentials file path"
+  exclude_labels: false
+  period: 1m
+  metrics:
+    - aligner: ALIGN_NONE
+      service: compute
+      metric_types:
+        - "instance/cpu"
 ----
