--- a/x-pack/libbeat/processors/add_cloudfoundry_metadata/docs/add_cloudfoundry_metadata.asciidoc
+++ b/x-pack/libbeat/processors/add_cloudfoundry_metadata/docs/add_cloudfoundry_metadata.asciidoc
@@ -53,6 +53,8 @@ It has the following settings:
 
 `client_secret`:: Client Secret to authenticate with Cloud Foundry.
 
-`cache_duration`:: (Optional) Maximum amount of time to cache an application's metadata.
+`cache_duration`:: (Optional) Maximum amount of time to cache an application's metadata. Defaults to 120 seconds.
+
+`cache_retry_delay`:: (Optional) Time to wait before trying to obtain an application's metadata again in case of error. Defaults to 20 seconds.
 
 `ssl`:: (Optional) SSL configuration to use when connecting to Cloud Foundry.
